--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ branches:
 
 before_script:
   - npm install -g ionic cordova
+  - ionic cordova platform add android
 
 script:
   - ionic cordova build
