--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,9 @@ branches:
 
 before_script:
   - npm install -g ionic cordova
-  - ionic cordova platform add android
 
 script:
+  - npm i
+  - rm -rf platforms
+  - ionic cordova platform add android
   - ionic cordova build
