--- a/.travis.yml
+++ b/.travis.yml
@@ -52,8 +52,14 @@ after_failure:
 before_deploy:
   - echo "Before Deploy Step"
 
-#deploy:
-#  - echo "Deploy Step"
+deploy:
+  provider: releases
+  api_key:
+    secure: YOUR_API_KEY_ENCRYPTED
+  file: "FILE TO UPLOAD"
+  skip_cleanup: true
+  on:
+    tags: trueS
 
 after_deploy:
   - echo "After Deploy Step"
