--- a/.travis.yml
+++ b/.travis.yml
@@ -59,7 +59,7 @@ deploy:
   file: "FILE TO UPLOAD"
   skip_cleanup: true
   on:
-    tags: trueS
+    tags: true
 
 after_deploy:
   - echo "After Deploy Step"
