Add all branches true

--- a/.travis.yml
+++ b/.travis.yml
@@ -48,9 +48,7 @@ deploy:
   file: platforms/android/app/build/outputs/apk/release/app-release-unsigned.apk
   on:
     repo: itsvick/ionic-travis
-    branches:
-      only:
-        - master
+    all_branches: true
 after_deploy:
 - echo "After Deploy Step"
 after_script:
